# excel-agent

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  README.md  agent.py  build.py  dev.py  eslint.config.js  excel_tools.py  index.html  package.json  pyproject.toml  pyrightconfig.json  test_excel_flow.py  vite.config.ts
.claude/: settings.local.json
docs/: deepagents-guide.md  new-excel-tool-plan.md
excel_agent/: __init__.py  config.py  core.py  events.py  logging_config.py  model_provider.py  session.py
excel_agent/callbacks/: __init__.py  llm_logger.py
excel_com/: __init__.py  advanced_ops.py  context.py  exceptions.py  manager.py  workbook_ops.py
libs/excel_com/: advanced_ops.py  constants.py  formatting_ops.py  formula_ops.py  manager.py  workbook_ops.py
libs/stream-msg-parser/: README.md  pyproject.toml
libs/stream-msg-parser/stream_msg_parser/: __init__.py  parser.py
libs/stream_msg_parser/: __init__.py  events.py  parser.py
skills/data-analysis/: SKILL.md
skills/formula-writing/: SKILL.md
skills/report-generation/: SKILL.md
src/: App.tsx  i18n.ts  router.tsx  styles.css
src-python/: main.py  server.py
src-python/agent/: __init__.py  analysis_agent.py  config.py  context.py  core.py  events.py  logging_config.py  model_provider.py  project.py
src-python/agent/callbacks/: __init__.py  llm_logger.py
src-python/api/: deps.py  errors.py
src-python/api/routers/: files.py  projects.py  settings.py  stream.py  ws_watcher.py
src-python/libs/deepagents/: __init__.py  graph.py
src-python/libs/excel_com/: __init__.py  com_thread.py  constants.py  errors.py  formula_ops.py  instance_manager.py  query_ops.py  range_ops.py  sheet_ops.py  table_ops.py  utils.py
src-python/libs/stream_msg_parser/: parser.py  pyproject.toml
src-python/services/: project_service.py  settings_service.py
src-python/tools/: __init__.py  base.py  schema_tool.py  subagent.py
src-python/tools/excel_tools/: __init__.py  _common.py  format_tool.py  formula_tool.py  read_tool.py  sheet_tool.py  table_tool.py  workbook_tool.py  write_tool.py
src/components/chat/: AssistantBubble.tsx  MarkdownRenderer.tsx  TaskPanel.tsx  ThinkingBlock.tsx  ToolCallsBlock.tsx  ToolInspectModal.tsx  UserBubble.tsx
src/components/ui/: badge.tsx  (+4 more)
src/hooks/: useAutoScroll.ts  useFileWatcher.ts  useLayout.tsx
src/lib/: formatMessage.ts
src/locales/: en-US.json  zh-CN.json
src/services/: api.ts
src/stores/: chatStore.ts  fileTreeStore.ts  projectStore.ts  settingsStore.ts
src/types/: index.ts  project.ts
tests/: __init__.py  conftest.py  test_agent.py  test_excel_tools.py  test_tools.py
tests/excel_agent/: __init__.py  test_config.py  test_core.py
tests/excel_com/: __init__.py  conftest.py  test_advanced_ops.py  test_constants.py  test_context.py  test_exceptions.py  test_formatting_ops.py  test_formula_ops.py  test_manager.py  test_workbook_ops.py
tests/ui/: __init__.py
tools/: excel_tool.py
ui/: __init__.py  base.py
ui/cli/: __init__.py  runner.py
ui/web/: .gitignore  __init__.py  api.py  server.py
(+56 files in other folders)
