[project]
name = "excel-agent"
version = "0.1.0"
description = "DeepAgents-based Excel processing agent for data analysis, formula generation, and report creation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.0",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "pywin32>=311",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["excel_com*", "skills*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
