[project]
name = "excel-agent"
version = "0.1.0"
description = "DeepAgents-based Excel processing agent for data analysis, formula generation, and report creation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "pywin32>=311",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "ruff",
    "build",
    "twine",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["excel_com*", "excel_agent*", "ui*", "skills*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.uv.sources]
deepagents = { path = "libs/deepagents/libs/deepagents", editable = true }
