[project]
name = "stream-msg-parser"
version = "0.1.0"
description = "Custom message parser for LangGraph streaming with stream_mode=messages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stream_msg_parser*"]
